# scrt-prediction-old

./: Cargo.toml  README.md
artifacts/: checksums.txt  price_oracle.wasm  price_prediction.wasm
contracts/oracle/: Cargo.toml  README.md
contracts/oracle/examples/: schema.rs
contracts/oracle/src/: contract.rs  lib.rs  state.rs
contracts/oracle/src/tests/: contract_test.rs  test_utils.rs
contracts/prediction/: Cargo.toml  README.md
contracts/prediction/examples/: schema.rs
contracts/prediction/src/: contract.rs  handler.rs  lib.rs  manage.rs  msg.rs  query.rs  state.rs
contracts/prediction/src/tests/: contract_test.rs  mod.rs  test_utils.rs
