[package]
name = "price-oracle"
version = "0.1.0"
authors = ["Ryuhei Matsuda"]
edition = "2018"
description = "Oracle for price prediction"
license = "MIT"
exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-storage = { git = "https://github.com/enigmampc/SecretNetwork", rev = "004c6bc" }
cosmwasm-std = { git = "https://github.com/enigmampc/SecretNetwork", rev = "004c6bc" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
band-protocol = { version = "1.0.0", path = "../../packages/band_protocol" }
scrt-prediction = { version = "1.0.0", path = "../../packages/scrt_prediction" }

[dev-dependencies]
cosmwasm-schema = "0.10.1"
